add and move photo and edit activity

--- a/cerficate.html
+++ b/cerficate.html
@@ -57,7 +57,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid"  src="assets/img/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"
+                                <img class="img-fluid"  src="assets/img/CARTIFICATE/ecbb1848-e555-4fc6-980a-5aea1f08fff2.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/3853addb-87db-4141-9a59-5c37282c682a.jpg"
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/3853addb-87db-4141-9a59-5c37282c682a.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -90,7 +90,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1 scale:3;">
                             <div class="content-box" style="margin-bottom: 2rem">
-                                <img class="img-fluid" src="assets/img/baa478e1-42bf-4038-8d20-54f939b8da62.jpg"
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/baa478e1-42bf-4038-8d20-54f939b8da62.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg"
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/d5eb68ee-68ef-4188-8ed0-fe9b71c4ba95.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -124,7 +124,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1 scale:3;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/e34978c5-8691-47ca-9546-0121a9ea666e.jpg"
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/e34978c5-8691-47ca-9546-0121a9ea666e.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg"
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/46e9f1d4-322e-46fd-8f0b-1f111da8ab61.jpg"
                                     alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
@@ -158,7 +158,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/IMG_20240208_192707.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/IMG_20240208_192707.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -173,7 +173,7 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/IMG_20240710_112446_1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/IMG_20240710_112446_1.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -190,7 +190,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/IMG_20241018_140707_1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/IMG_20241018_140707_1.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -204,7 +204,7 @@
                         </div>
                         <div class="col-lg-6" style="flex:2 scale:2;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/Screenshot_2024_1020_083041.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/Screenshot_2024_1020_083041.jpg" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -222,7 +222,7 @@
                     <div class="row">
                         <div class="col-lg-6" style="flex:1;">
                             <div class="content-box" style="margin-bottom: 2rem;">
-                                <img class="img-fluid" src="assets/img/Screenshot 2024-12-18 211032.png" alt="..." />
+                                <img class="img-fluid" src="assets/img/CARTIFICATE/Screenshot 2024-12-18 211032.png" alt="..." />
                                 <div class="">
                                     <div class="content-section-heading">
                                         <div class="content-section-heading text-center">
@@ -239,7 +239,7 @@
                     </div>
                     <div style="height: 2rem;"></div>
                     <!-- Footer-->
-                    <div class="content-box" style="height:115px ; width: 400px; margin:auto">
+                    <div class="content-box" style="height:115px ; max-width: 400px; margin:auto">
                         <footer class="footer text-center">
                             <div class="container px-4 px-lg-5">
                                 <ul class="list-inline mb-0">
