--- a/activity.html
+++ b/activity.html
@@ -1,51 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>My Portfolio </title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Simple line icons-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <!-- Navigation-->
-        <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-        <nav id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a>MENU</a></li>
-                <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
-                <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
-                <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
-                <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
-                <li class="sidebar-nav-item"><a href="project.html">PROJECT</a></li>
-            </ul>
-        </nav>
-        <section class="content-section" id="portfolio">
-            <div class="container px-4 px-lg-5 ">
-                <div class="container">
-                    <div class="content-box">
-                        <div class="content-section-heading">
-                            <div class="content-section-heading text-center">
-                                <h2 class="mb-0" style="">ACTIVITY</h2>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>My Portfolio </title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Simple line icons-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
+        rel="stylesheet" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+        rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+    <!-- Navigation-->
+    <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand"><a>MENU</a></li>
+            <li class="sidebar-nav-item"><a href="index.html">HOME</a></li>
+            <li class="sidebar-nav-item"><a href="profile.html">PROFILE</a></li>
+            <li class="sidebar-nav-item"><a href="activity.html">ACTIVITY</a></li>
+            <li class="sidebar-nav-item"><a href="cerficate.html">CERTIFICATE</a></li>
+            <li class="sidebar-nav-item"><a href="project.html">PROJECT</a></li>
+        </ul>
+    </nav>
+    <section class="content-section" id="portfolio">
+        <div class="container px-4 px-lg-5 ">
+            <div class="container">
+                <div class="content-box" style="margin-bottom:2rem ;">
+                    <div class="content-section-heading">
+                        <div class="content-section-heading text-center">
+                            <h2 class="mb-0" style="">ACTIVITY</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row gx-0">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6" style="flex:1;">
+                                <div class="content-box 1" style="max-width:400px ; margin:auto ; position: relative; z-index: 2;">
+                                    <h1>kmutt engineering open house 2023</h1>
+                                </div>
+                                <div class="content-box 2" style="margin-bottom: 2rem; position: relative; top:-70px; z-index: 1;">
+                                    <div style="justify-items: center;">
+                                        <div class="col-lg-6" style="display:flex; margin-top:4rem">
+                                            <img class="img-fluid" style="flex: 1; margin: auto; max-width: 60% " src="assets/img/ACTIVITY/IMG_25660121_140112.jpg"
+                                        alt="..." />
+                                            <img class="img-fluid" style="flex: 2; margin: auto; max-width: 60%" src="assets/img/CARTIFICATE/e34978c5-8691-47ca-9546-0121a9ea666e.jpg"
+                                        alt="..." />
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+            <!-- Footer-->
+            <div class="content-box" style="height:115px ; width: 400px; margin:auto">
+                <footer class="footer text-center">
+                    <div class="container px-4 px-lg-5">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3"
+                                    href="https://www.facebook.com/profile.php?id=100018143700682&locale=th_TH"><i
+                                        class="icon-social-facebook"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white mr-3"
+                                    href="https://www.instagram.com/pce.ntp_07/"><i
+                                        class="icon-social-instagram"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-link rounded-circle text-white" href="https://github.com/juji404"><i
+                                        class="icon-social-github"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </section>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
